# aioserial.py

./: .gitignore  LICENSE  NOTICE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
src/aioserial/: __init__.py  aioserial.py  protocol_aioserial.py
