[tool.poetry]
name = "aioserial"
version = "1.3.1"
description = "An asynchronous serial port library of Python"
authors = ["Johann Chang <mr.changyuheng@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/changyuheng/aioserial.py"
packages = [
    {include = "aioserial", from = "packages"},
]

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
