[tool.poetry]
name = "aioserial"
version = "1.2.3"
description = "An asynchronous serial port library of Python"
authors = ["Henry Chang <mr.changyuheng@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/changyuheng/aioserial"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
